--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <div>
     <section class="section-keyword mb-3 mt-5 float-left ml-5 rounded"
              style="width: 70%; height: 100%; background: #0B95FF">
-        <div class="keyword-board text-center display-4 font-weight-bold" style="margin: 18% auto; font-size: 120px">
-            <p id="keyword">MINI GAME CEV13</p>
+        <div class="keyword-board text-center display-4 font-weight-bold" style="margin: 18% auto; font-size: 50px">
+            <p id="keyword"><b style="font-size:120px">MINI GAME CEV13</b></p>
         </div>
     </section>
     <section class="container float-left ml-5 mt-2" style="width: 20%; height: 300px">
